--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ coroutinesCore = "1.7.1"
 ktor = "2.3.11"
 kotlinSerialization = "1.7.0-RC"
 kotlinDatetime = "0.6.0"
+compose = "1.6.11"
 
 
 [libraries]
@@ -17,5 +18,9 @@ ktor-client-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version
 
 kotlinx-datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "kotlinDatetime" }
 
+
+
 [plugins]
 jetbrains-kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "compose" }
+jetbrains-compiler-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
